fix skills section mobile

--- a/src/containers/about/about.css
+++ b/src/containers/about/about.css
@@ -126,7 +126,7 @@
   }
 
   .about-skills-container {
-    width: 70%;
+    width: 97%;
   }
 
   .about-function-dot {
